--- a/wedding-landing-page.html
+++ b/wedding-landing-page.html
@@ -39,7 +39,7 @@
             background-size: cover;
         }
         #hero {
-            background-image: url('https://image.freepik.com/free-photo/couple-love-enjoying-tender-moments-together-outdoors_1150-3690.jpg');
+            background-image: url('https://imgur.com/a/j8BCrsH');
         }
         #hero::before {
             content: '';
